--- a/weekly/2026-W07.html
+++ b/weekly/2026-W07.html
@@ -49,7 +49,7 @@ h3 { font-size:1.05em; margin-bottom:6px; }
 </head>
 <body>
 <h1>📡 Signal Monitor Weekly</h1>
-<p class="subtitle">2026-W07 — 2026-02-09 to 2026-02-15 — Generated 2026-02-14 19:30</p>
+<p class="subtitle">2026-W07 — 2026-02-09 to 2026-02-15 — Generated 2026-02-14 19:35</p>
 
 <div class="weekly-brief">
 <h2 style="border:none;margin:0 0 8px">Weekly Brief</h2>
@@ -62,19 +62,19 @@ h3 { font-size:1.05em; margin-bottom:6px; }
   <p>The hype shifted from "AI will change everything" to "AI is changing everything right now" — 4% of GitHub commits are already Claude Code, and the trajectory points to 20%+ by year-end. The signal-to-noise ratio in AI Twitter remains terrible, but the builders are pulling ahead of the talkers.</p>
 </div>
 <div class="editorial-card">
-  <h3 style="color:#f7931a">CRYPTO</h3>
+  <h3 style="color:#f7931a">Crypto</h3>
   <p>Institutional walls are falling fast — Goldman's $2.36B disclosure, Robinhood's L2, and Coinbase's blowout earnings signal that crypto infrastructure is becoming financial infrastructure, period. The DeFi stack (Aave, Morpho, Kamino) is quietly eating traditional lending.</p>
 </div>
 <div class="editorial-card">
-  <h3 style="color:#10b981">OPENCLAW</h3>
+  <h3 style="color:#10b981">OpenClaw</h3>
   <p>The ecosystem is maturing fast with wallet integrations (Clawlett), coding challenges, and battle-tested patterns for autonomous agents emerging from the community. Still early, but the infrastructure layer is solidifying.</p>
 </div>
 <div class="editorial-card">
-  <h3 style="color:#ef4444">STOCKS_MACRO</h3>
+  <h3 style="color:#ef4444">Stocks & Macro</h3>
   <p>X integrating crypto and stock trading directly into the timeline is potentially the most underrated story of the week — 600M monthly users getting one-tap access to markets could reshape retail trading overnight.</p>
 </div>
 <div class="editorial-card">
-  <h3 style="color:#3b82f6">TECH</h3>
+  <h3 style="color:#3b82f6">Tech</h3>
   <p>Elon open-sourcing X Chat code and Nothing beating Apple to self-assembling apps tells you everything about where big tech innovation is actually happening — hint: not at Apple. The open-source wave in dev tools (Tambo, OpenWhisper, RooDB) is accelerating.</p>
 </div>
 
@@ -83,113 +83,107 @@ h3 { font-size:1.05em; margin-bottom:6px; }
 <div class="tweet-card">
   <div class="tweet-rank">#1</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@balajis</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">88pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/balajis" target="_blank" class="tweet-author">@balajis</a> <span class="tweet-cat" style="background:#8b5cf6">AI</span> <span class="tweet-score">88pts</span></div>
     <div class="tweet-text">From AI to ZK.
 
 Artificial intelligence is the attack.
 Zero knowledge is the defense.
 AI takes advantage of the slightest slip.
 ZK does not let anything slip.
-AI decodes all the data.
-ZK encrypts all </div>
-    <a href="https://x.com/balajis/status/2022462579713675506" target="_blank" class="tweet-link">→ View</a>
+AI decodes all the…</div>
+    <a href="https://x.com/balajis/status/2022462579713675506" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#2</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@WatcherGuru</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">80pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/WatcherGuru" target="_blank" class="tweet-author">@WatcherGuru</a> <span class="tweet-cat" style="background:#f7931a">Crypto</span> <span class="tweet-score">80pts</span></div>
     <div class="tweet-text">JUST IN: Goldman Sachs discloses holding $2,360,000,000 worth of crypto:
 
 Bitcoin: $1,100,000,000
 ETH: $1,000,000,000
 XRP: $153,000,000
 SOL: $108,000,000</div>
-    <a href="https://x.com/WatcherGuru/status/2021325189674357204" target="_blank" class="tweet-link">→ View</a>
+    <a href="https://x.com/WatcherGuru/status/2021325189674357204" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#3</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@elonmusk</span> <span class="tweet-cat" style="background:#3b82f6">tech</span> <span class="tweet-score">79pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/elonmusk" target="_blank" class="tweet-author">@elonmusk</a> <span class="tweet-cat" style="background:#3b82f6">Tech</span> <span class="tweet-score">79pts</span></div>
     <div class="tweet-text">In the next few months, we will be doing rigorous security tests of 𝕏 Chat and will open source all the code</div>
-    <a href="https://x.com/elonmusk/status/2020912495381057909" target="_blank" class="tweet-link">→ View</a>
+    <a href="https://x.com/elonmusk/status/2020912495381057909" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#4</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@VitalikButerin</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">67pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/VitalikButerin" target="_blank" class="tweet-author">@VitalikButerin</a> <span class="tweet-cat" style="background:#f7931a">Crypto</span> <span class="tweet-score">67pts</span></div>
     <div class="tweet-text">This is the right way to "make Ethereum be the home for AI".
 
-Don't just do what everyone else would do anyway, just on rails with an octahedron logo instead of a square or circle or pentagon logo. Ma</div>
-    <a href="https://x.com/VitalikButerin/status/2021594878162157948" target="_blank" class="tweet-link">→ View</a>
+Don't just do what everyone else would do anyway, just on rails with an octahedron logo instead of a square or circle…</div>
+    <a href="https://x.com/VitalikButerin/status/2021594878162157948" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#5</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@saylor</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">67pts</span></div>
-    <div class="tweet-text">Strategy has acquired 1,142 BTC for ~$90.0 million at ~$78,815 per bitcoin. As of 2/8/2026, we hodl 714,644 $BTC acquired for ~$54.35 billion at ~$76,056 per bitcoin. $MSTR $STRC https://t.co/4X2c81LQ</div>
-    <a href="https://x.com/saylor/status/2020846107685695931" target="_blank" class="tweet-link">→ View</a>
+    <div class="tweet-meta"><a href="https://x.com/saylor" target="_blank" class="tweet-author">@saylor</a> <span class="tweet-cat" style="background:#f7931a">Crypto</span> <span class="tweet-score">67pts</span></div>
+    <div class="tweet-text">Strategy has acquired 1,142 BTC for ~$90.0 million at ~$78,815 per bitcoin. As of 2/8/2026, we hodl 714,644 $BTC acquired for ~$54.35 billion at ~$76,056 per bitcoin. $MSTR $STRC…</div>
+    <a href="https://x.com/saylor/status/2020846107685695931" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#6</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@elonmusk</span> <span class="tweet-cat" style="background:#6b7280">other</span> <span class="tweet-score">66pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/elonmusk" target="_blank" class="tweet-author">@elonmusk</a> <span class="tweet-cat" style="background:#6b7280">Other</span> <span class="tweet-score">66pts</span></div>
     <div class="tweet-text">Medicaid data has been open sourced, so the level of fraud is easy to identify. 
 
 
 @DOGE
  is not a department, it’s a state of mind.</div>
-    <a href="https://x.com/elonmusk/status/2022416233644367898" target="_blank" class="tweet-link">→ View</a>
+    <a href="https://x.com/elonmusk/status/2022416233644367898" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#7</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@RobinhoodApp</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">66pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/RobinhoodApp" target="_blank" class="tweet-author">@RobinhoodApp</a> <span class="tweet-cat" style="background:#f7931a">Crypto</span> <span class="tweet-score">66pts</span></div>
     <div class="tweet-text">The Robinhood Chain public testnet is live 
 
 Developers can now build on a financial-grade Ethereum Layer 2 built on 
 @arbitrum
-— designed to support tokenized real-world and digital assets.
-
-Start bu</div>
-    <a href="https://x.com/RobinhoodApp/status/2021399303722258575" target="_blank" class="tweet-link">→ View</a>
+— designed to support tokenized real-world and…</div>
+    <a href="https://x.com/RobinhoodApp/status/2021399303722258575" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#8</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@dylan522p</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">65pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/dylan522p" target="_blank" class="tweet-author">@dylan522p</a> <span class="tweet-cat" style="background:#8b5cf6">AI</span> <span class="tweet-score">65pts</span></div>
     <div class="tweet-text">4% of GitHub public commits are being authored by Claude Code right now.
-At the current trajectory, we believe that Claude Code will be 20%+ of all daily commits by the end of 2026.
-While you blinked,</div>
-    <a href="https://x.com/dylan522p/status/2020824057785237872" target="_blank" class="tweet-link">→ View</a>
+At the current trajectory, we believe that Claude Code will be 20%+ of all daily commits by the end of…</div>
+    <a href="https://x.com/dylan522p/status/2020824057785237872" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#9</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@MoltDomains</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">65pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/MoltDomains" target="_blank" class="tweet-author">@MoltDomains</a> <span class="tweet-cat" style="background:#f7931a">Crypto</span> <span class="tweet-score">65pts</span></div>
     <div class="tweet-text">.molt domains Fair Mint goes live this Thursday 
 
  FREE mint for whitelisted users (1 NFT per wallet)
  Public mint: 0.0024 ETH
 Tradeable on 
 @OpenSea
- with lifetime domain access
-
-Join the whitelist  </div>
-    <a href="https://x.com/MoltDomains/status/2020889579767631958" target="_blank" class="tweet-link">→ View</a>
+ with lifetime domain…</div>
+    <a href="https://x.com/MoltDomains/status/2020889579767631958" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 <div class="tweet-card">
   <div class="tweet-rank">#10</div>
   <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@andyyy</span> <span class="tweet-cat" style="background:#f7931a">crypto</span> <span class="tweet-score">63pts</span></div>
+    <div class="tweet-meta"><a href="https://x.com/andyyy" target="_blank" class="tweet-author">@andyyy</a> <span class="tweet-cat" style="background:#f7931a">Crypto</span> <span class="tweet-score">63pts</span></div>
     <div class="tweet-text">The most important names in payments in 2026 have already been established.
 
 My list to pay attention to:
@@ -200,70 +194,8 @@ Stripe
 Visa
 Mastercard
 Cypher
-Gnosis Pay
-Ready
-Holyheld
-Exa
-Rain
-MoonPay
-Coinme
-BVNK
-</div>
-    <a href="https://x.com/andyyy/status/2021099561176220079" target="_blank" class="tweet-link">→ View</a>
-  </div>
-</div>
-<div class="tweet-card">
-  <div class="tweet-rank">#11</div>
-  <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@LinusEkenstam</span> <span class="tweet-cat" style="background:#3b82f6">tech</span> <span class="tweet-score">63pts</span></div>
-    <div class="tweet-text">This is what Apple should have done a year ago. 
-
-But instead Nothing is charging full-steam ahead. 
-
-If you been following along here, you know that through the last couple of years. I've been talkin</div>
-    <a href="https://x.com/LinusEkenstam/status/2021243521533903291" target="_blank" class="tweet-link">→ View</a>
-  </div>
-</div>
-<div class="tweet-card">
-  <div class="tweet-rank">#12</div>
-  <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@lazukars</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">63pts</span></div>
-    <div class="tweet-text">OpenAI and Anthropic engineers leaked a prompting technique that separates beginners from experts.
-
-It's called "Socratic prompting" and it's insanely simple.
-
-Instead of telling the AI what to do, yo</div>
-    <a href="https://x.com/lazukars/status/2020787126624030910" target="_blank" class="tweet-link">→ View</a>
-  </div>
-</div>
-<div class="tweet-card">
-  <div class="tweet-rank">#13</div>
-  <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@naval</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">63pts</span></div>
-    <div class="tweet-text">Everyone will soon have “AI Anxiety.”</div>
-    <a href="https://x.com/naval/status/1642267611336704000" target="_blank" class="tweet-link">→ View</a>
-  </div>
-</div>
-<div class="tweet-card">
-  <div class="tweet-rank">#14</div>
-  <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@akshay_pachaar</span> <span class="tweet-cat" style="background:#8b5cf6">ai</span> <span class="tweet-score">63pts</span></div>
-    <div class="tweet-text">Anthropic released a 33-page guide on building Skills.
-
-Here's everything you need to know (under 370 words):
-
-First, what are Skills?
-
-A skill is a folder that teaches Claude how to handle specific t</div>
-    <a href="https://x.com/akshay_pachaar/status/2022220152910352763" target="_blank" class="tweet-link">→ View</a>
-  </div>
-</div>
-<div class="tweet-card">
-  <div class="tweet-rank">#15</div>
-  <div class="tweet-body">
-    <div class="tweet-meta"><span class="tweet-author">@WatcherGuru</span> <span class="tweet-cat" style="background:#ef4444">stocks_macro</span> <span class="tweet-score">63pts</span></div>
-    <div class="tweet-text">JUST IN: Odds of Coinbase $COIN beating quarterly earnings surge to 73%</div>
-    <a href="https://x.com/WatcherGuru/status/2020917292138111013" target="_blank" class="tweet-link">→ View</a>
+Gnosis…</div>
+    <a href="https://x.com/andyyy/status/2021099561176220079" target="_blank" class="tweet-link">View on X →</a>
   </div>
 </div>
 
