--- a/weekly/2026-W07-radar.html
+++ b/weekly/2026-W07-radar.html
@@ -3,35 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Oasis Vault Radar — lending, swaps, cross-chain & stablecoin signals for 2026-W07">
 <title>Oasis Vault Radar — 2026-W07</title>
 <style>
 :root { --bg: #0a0e1a; --card: #111827; --border: #1e2a3a; --text: #e6edf3; --dim: #8b949e; --accent: #f7931a; --link: #58a6ff; }
 * { margin:0; padding:0; box-sizing:border-box; }
-body { background:var(--bg); color:var(--text); font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif; line-height:1.6; padding:20px; max-width:900px; margin:0 auto; }
+html { scroll-behavior:smooth; }
+body { background:var(--bg); color:var(--text); font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif; line-height:1.6; padding:20px; max-width:900px; margin:0 auto; -webkit-font-smoothing:antialiased; }
 h1 { font-size:1.8em; margin-bottom:4px; color:var(--accent); }
-h2 { font-size:1.2em; margin:28px 0 12px; color:var(--accent); border-bottom:1px solid var(--border); padding-bottom:6px; }
-.subtitle { color:var(--dim); margin-bottom:8px; }
-.description { color:var(--dim); font-size:0.9em; margin-bottom:24px; }
+h2 { font-size:1.2em; margin:32px 0 14px; color:var(--accent); border-bottom:1px solid var(--border); padding-bottom:8px; }
+.subtitle { color:var(--dim); margin-bottom:8px; font-size:0.9em; }
+.description { color:var(--dim); font-size:0.88em; margin-bottom:24px; line-height:1.5; }
 .section-count { font-size:0.8em; color:var(--dim); font-weight:normal; }
-.signal-card { background:var(--card); border:1px solid var(--border); border-radius:8px; padding:14px; margin:8px 0; }
-.signal-header { display:flex; justify-content:space-between; align-items:center; margin-bottom:6px; }
-.signal-author { color:var(--link); text-decoration:none; font-weight:600; }
-.signal-author:hover { text-decoration:underline; }
+.signal-card { background:var(--card); border:1px solid var(--border); border-radius:10px; padding:14px 16px; margin:10px 0; transition:border-color 0.2s, transform 0.15s; }
+.signal-card:hover { border-color:var(--accent); transform:translateY(-1px); }
+.signal-header { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; }
+.signal-author { color:var(--link); text-decoration:none; font-weight:600; transition:color 0.15s; }
+.signal-author:hover { color:#79b8ff; }
 .signal-score { color:var(--accent); font-size:0.85em; font-weight:600; }
-.signal-text { font-size:0.9em; color:var(--text); margin-bottom:8px; }
+.signal-text { font-size:0.9em; color:var(--text); margin-bottom:10px; line-height:1.5; }
 .signal-footer { display:flex; justify-content:space-between; align-items:center; }
-.signal-keywords { font-size:0.75em; color:var(--dim); }
-.signal-link { font-size:0.85em; color:var(--link); text-decoration:none; }
-.signal-link:hover { text-decoration:underline; }
-.empty { color:var(--dim); font-style:italic; }
-.footer { margin-top:40px; text-align:center; color:var(--dim); font-size:0.8em; }
-.footer a { color:var(--link); text-decoration:none; }
+.signal-keywords { font-size:0.75em; color:var(--dim); opacity:0.7; }
+.signal-link { font-size:0.85em; color:var(--link); text-decoration:none; opacity:0.7; transition:opacity 0.15s; white-space:nowrap; }
+.signal-link:hover { opacity:1; }
+.empty { color:var(--dim); font-style:italic; padding:8px 0; }
+.footer { margin-top:48px; text-align:center; color:var(--dim); font-size:0.8em; padding-top:20px; border-top:1px solid var(--border); }
+.footer a { color:var(--link); text-decoration:none; transition:color 0.15s; }
+.footer a:hover { color:#79b8ff; }
+.footer .nav { display:flex; gap:16px; justify-content:center; margin-top:8px; }
 </style>
 </head>
 <body>
 <h1>🔭 Oasis Vault Radar</h1>
-<p class="subtitle">2026-W07 — 2026-02-09 to 2026-02-15</p>
-<p class="description">Weekly intelligence on lending, swaps, cross-chain, and stablecoin activity relevant to Oasis Vault operations.</p>
+<p class="subtitle">2026-W07 · 2026-02-09 to 2026-02-15</p>
+<p class="description">Lending, swaps, cross-chain, and stablecoin signals relevant to Oasis Vault.</p>
 
 <div class="section">
 <h2>Lending & Borrowing <span class="section-count">5 signals</span></h2>
@@ -385,10 +390,11 @@ spl.forex</p>
 
 
 <div class="footer">
-<p>Oasis Vault Radar by Max Umbra — <a href="https://maxumbra.github.io/signal-monitor/">Signal Monitor</a></p>
+<p>Oasis Vault Radar by Max Umbra</p>
+<div class="nav">
+<a href="https://maxumbra.github.io/signal-monitor/">← All Reports</a>
+<a href="https://maxumbra.github.io/signal-monitor/weekly/2026-W07.html">📡 Weekly Report</a>
 </div>
-<script>
-let startY=0,pulling=false;const ptr=document.createElement('div');ptr.style.cssText='position:fixed;top:0;left:0;right:0;text-align:center;padding:12px;color:#8b949e;font-size:14px;z-index:9999;transform:translateY(-100%);transition:transform .2s;background:#0a0e1a;';ptr.textContent='↓ Pull to refresh';document.body.prepend(ptr);document.addEventListener('touchstart',e=>{if(window.scrollY<5){startY=e.touches[0].pageY;pulling=true;}},{passive:true});document.addEventListener('touchmove',e=>{if(!pulling)return;const dy=e.touches[0].pageY-startY;if(dy<0){pulling=false;return;}if(dy>10&&dy<150){e.preventDefault();ptr.style.transform=`translateY(${Math.min(dy/2,40)}px)`;ptr.textContent=dy>80?'↑ Release to refresh':'↓ Pull to refresh';}},{passive:false});document.addEventListener('touchend',e=>{if(!pulling)return;pulling=false;const dy=e.changedTouches[0].pageY-startY;ptr.style.transform='translateY(-100%)';if(dy>80&&dy<200){ptr.textContent='Refreshing...';ptr.style.transform='translateY(0)';location.reload();}});
-</script>
+</div>
 </body>
 </html>
