--- a/index.html
+++ b/index.html
@@ -61,15 +61,35 @@
     <h1>Signal Monitor</h1>
     <p class="subtitle">Timeline digest by <a href="https://x.com/beto_neh" style="color: #1d9bf0;">@beto_neh</a></p>
     <ul>
-        <li class="weekly"><a href="weekly/2026-W07.html">📡 Weekly Report — 2026-W07<br><span class="date">2026-W07</span></a></li><li class="weekly" style="border-color:#f7931a"><a href="weekly/2026-W07-radar.html">🔭 Oasis Vault Radar — 2026-W07<br><span class="date">2026-W07</span></a></li><li><a href="2026-02-14-0800.html">February 14, 2026 at 08:00 AM<br><span class="date">2026-02-14-0800</span></a></li><li><a href="2026-02-13-2001.html">February 13, 2026 at 08:01 PM<br><span class="date">2026-02-13-2001</span></a></li><li><a href="2026-02-13-0800.html">February 13, 2026 at 08:00 AM<br><span class="date">2026-02-13-0800</span></a></li><li><a href="2026-02-12-2000.html">February 12, 2026 at 08:00 PM<br><span class="date">2026-02-12-2000</span></a></li><li><a href="2026-02-12-0800.html">February 12, 2026 at 08:00 AM<br><span class="date">2026-02-12-0800</span></a></li><li><a href="2026-02-11-2000.html">February 11, 2026 at 08:00 PM<br><span class="date">2026-02-11-2000</span></a></li><li><a href="2026-02-11-0922.html">February 11, 2026 at 09:22 AM<br><span class="date">2026-02-11-0922</span></a></li><li><a href="2026-02-11-0906.html">February 11, 2026 at 09:06 AM<br><span class="date">2026-02-11-0906</span></a></li><li><a href="2026-02-11-0800.html">February 11, 2026 at 08:00 AM<br><span class="date">2026-02-11-0800</span></a></li><li><a href="2026-02-10-2301.html">February 10, 2026 at 11:01 PM<br><span class="date">2026-02-10-2301</span></a></li><li><a href="2026-02-10-2000.html">February 10, 2026 at 08:00 PM<br><span class="date">2026-02-10-2000</span></a></li><li><a href="2026-02-10-0800.html">February 10, 2026 at 08:00 AM<br><span class="date">2026-02-10-0800</span></a></li><li><a href="2026-02-09-2006.html">February 09, 2026 at 08:06 PM<br><span class="date">2026-02-09-2006</span></a></li><li><a href="2026-02-09-1229.html">February 09, 2026 at 12:29 PM<br><span class="date">2026-02-09-1229</span></a></li><li><a href="2026-02-09-1017.html">February 09, 2026 at 10:17 AM<br><span class="date">2026-02-09-1017</span></a></li>
+        <li class="weekly"><a href="weekly/2026-W07.html">📡 Weekly Report — 2026-W07<br><span class="date">2026-W07</span></a></li><li class="weekly" style="border-color:#f7931a"><a href="weekly/2026-W07-radar.html">🔭 Oasis Vault Radar — 2026-W07<br><span class="date">2026-W07</span></a></li><li><a href="2026-02-14-2000.html">February 14, 2026 at 08:00 PM<br><span class="date">2026-02-14-2000</span></a></li><li><a href="2026-02-14-0800.html">February 14, 2026 at 08:00 AM<br><span class="date">2026-02-14-0800</span></a></li><li><a href="2026-02-13-2001.html">February 13, 2026 at 08:01 PM<br><span class="date">2026-02-13-2001</span></a></li><li><a href="2026-02-13-0800.html">February 13, 2026 at 08:00 AM<br><span class="date">2026-02-13-0800</span></a></li><li><a href="2026-02-12-2000.html">February 12, 2026 at 08:00 PM<br><span class="date">2026-02-12-2000</span></a></li><li><a href="2026-02-12-0800.html">February 12, 2026 at 08:00 AM<br><span class="date">2026-02-12-0800</span></a></li><li><a href="2026-02-11-2000.html">February 11, 2026 at 08:00 PM<br><span class="date">2026-02-11-2000</span></a></li><li><a href="2026-02-11-0922.html">February 11, 2026 at 09:22 AM<br><span class="date">2026-02-11-0922</span></a></li><li><a href="2026-02-11-0906.html">February 11, 2026 at 09:06 AM<br><span class="date">2026-02-11-0906</span></a></li><li><a href="2026-02-11-0800.html">February 11, 2026 at 08:00 AM<br><span class="date">2026-02-11-0800</span></a></li><li><a href="2026-02-10-2301.html">February 10, 2026 at 11:01 PM<br><span class="date">2026-02-10-2301</span></a></li><li><a href="2026-02-10-2000.html">February 10, 2026 at 08:00 PM<br><span class="date">2026-02-10-2000</span></a></li><li><a href="2026-02-10-0800.html">February 10, 2026 at 08:00 AM<br><span class="date">2026-02-10-0800</span></a></li><li><a href="2026-02-09-2006.html">February 09, 2026 at 08:06 PM<br><span class="date">2026-02-09-2006</span></a></li><li><a href="2026-02-09-1229.html">February 09, 2026 at 12:29 PM<br><span class="date">2026-02-09-1229</span></a></li><li><a href="2026-02-09-1017.html">February 09, 2026 at 10:17 AM<br><span class="date">2026-02-09-1017</span></a></li>
     </ul>
     <footer>
         Powered by <a href="https://github.com/maxumbra/signal-monitor">Signal Monitor</a>
     </footer>
     <script>
-        // Unregister any old service workers
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.getRegistrations().then(r => r.forEach(sw => sw.unregister()));
+        // PWA pull-to-refresh (only in standalone mode)
+        if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
+            let sy=0,p=false,d=document,b=d.body;
+            const el=d.createElement('div');
+            el.style.cssText='position:fixed;top:-50px;left:0;right:0;height:50px;display:flex;align-items:center;justify-content:center;color:#71767b;font-size:14px;z-index:9999;transition:top 0.2s;background:#0f0f0f;';
+            el.textContent='↓ Pull to refresh';
+            b.prepend(el);
+            d.addEventListener('touchstart',e=>{if(window.scrollY<1){sy=e.touches[0].clientY;p=true;}},{passive:true});
+            d.addEventListener('touchmove',e=>{
+                if(!p)return;
+                const dy=e.touches[0].clientY-sy;
+                if(dy<0||window.scrollY>0){p=false;el.style.top='-50px';return;}
+                if(dy>5)e.preventDefault();
+                const t=Math.min(dy*0.4,50);
+                el.style.top=(t-50)+'px';
+                el.textContent=dy>80?'↑ Release':'\u2193 Pull to refresh';
+            },{passive:false});
+            d.addEventListener('touchend',e=>{
+                if(!p){return;}p=false;
+                const dy=e.changedTouches[0].clientY-sy;
+                el.style.top='-50px';
+                if(dy>80){el.style.top='0';el.textContent='Refreshing...';setTimeout(()=>location.reload(),200);}
+            });
         }
     </script>
 </body>
