--- a/2026-02-26-2000.html
+++ b/2026-02-26-2000.html
@@ -213,6 +213,13 @@
             word-break: break-word;
         }
         
+        .editorial-card a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+        .editorial-card a:hover {
+            text-decoration: underline;
+        }
         .tweet-text a {
             color: var(--accent);
             text-decoration: none;
