--- a/index.html
+++ b/index.html
@@ -92,5 +92,17 @@
             });
         }
     </script>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js').then(reg => {
+    // Request notification permission on first visit
+    if (Notification.permission === 'default') {
+      Notification.requestPermission();
+    }
+    // Clear badge when opening the app
+    if (navigator.clearAppBadge) navigator.clearAppBadge();
+  });
+}
+</script>
 </body>
 </html>
